fix(notifications): use the opacity to show the notifications container
The border made a horizontal scrollbar appear.

--- a/app/style/global.scss
+++ b/app/style/global.scss
@@ -144,10 +144,7 @@ strong.white-text {
 }
 
 .blink-container {
-    border-color: maroon;
-    border-style: solid;
-    border-width: 3px;
-    margin: -3px;
+    opacity: 0.5 !important;
 }
 
 
